deployments/grafana/ingress_grafana.yaml
#apiVersion: extensions/v1beta1

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
        # name: grafana
   #namespace: kube-system
   #spec:
        #rules:
           # - host: k8s.grafana
     #http:
             #paths:
               #- path: /
         #backend:
                 #serviceName: grafana
          #          servicePort: 3000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  #  namespace: kube-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
